--- a/templates/landing_page/partials/form_new.html.twig
+++ b/templates/landing_page/partials/form_new.html.twig
@@ -73,43 +73,43 @@
             <div class="collapsible-header"><i class="material-icons">markunread_mailbox</i>Adresse de livraison différente ?</div>
             <div class="collapsible-body">
                 <div class="input-field">
-                    {{ form_label(formdelivery.firstname) }}
-                    {{ form_widget(formdelivery.firstname) }}
+                    {{ form_label(form.delivery.firstname) }}
+                    {{ form_widget(form.delivery.firstname) }}
                     <div class="form-error"></div>
                 </div>
                 <div class="input-field">
-                    {{ form_label(formdelivery.lastname) }}
-                    {{ form_widget(formdelivery.lastname) }}
+                    {{ form_label(form.delivery.lastname) }}
+                    {{ form_widget(form.delivery.lastname) }}
                     <div class="form-error"></div>
                 </div>
                 <div class="input-field">
-                    {{ form_label(formdelivery.adress) }}
-                    {{ form_widget(formdelivery.adress) }}
+                    {{ form_label(form.delivery.adress) }}
+                    {{ form_widget(form.delivery.adress) }}
                     <div class="form-error"></div>
                 </div>
                 <div class="input-field">
-                    {{ form_label(formdelivery.complement) }}
-                    {{ form_widget(formdelivery.complement) }}
+                    {{ form_label(form.delivery.complement) }}
+                    {{ form_widget(form.delivery.complement) }}
                     <div class="form-error"></div>
                 </div>
                 <div class="input-field">
-                    {{ form_label(formdelivery.city) }}
-                    {{ form_widget(formdelivery.city) }}
+                    {{ form_label(form.delivery.city) }}
+                    {{ form_widget(form.delivery.city) }}
                     <div class="form-error"></div>
                 </div>
                 <div class="input-field">
-                    {{ form_label(formdelivery.postalcode) }}
-                    {{ form_widget(formdelivery.postalcode) }}
+                    {{ form_label(form.delivery.postalcode) }}
+                    {{ form_widget(form.delivery.postalcode) }}
                     <div class="form-error"></div>
                 </div>
                 <div class="input-field">
-                {{ form_widget(formdelivery.country) }}
-                {{ form_label(formdelivery.country,'Pays') }} 
+                {{ form_widget(form.delivery.country) }}
+                {{ form_label(form.delivery.country,'Pays') }} 
                 <div class="form-error"></div>
             </div>
                 <div class="input-field">
-                    {{ form_label(formdelivery.phonenumber) }}
-                    {{ form_widget(formdelivery.phonenumber) }}
+                    {{ form_label(form.delivery.phonenumber) }}
+                    {{ form_widget(form.delivery.phonenumber) }}
                     <div class="form-error"></div>
                 </div>
             </div>
@@ -128,7 +128,7 @@
                 <div class="collapsible-body card-form">
                     <div class="row">
                         <div class="center-align">
-                            <button type="submit" name="order[payment_method]" value="lpmonetico" class="btn-large btn-block waves-effect waves-light">Continuer</button>
+                            <button type="submit" name="order[payment_method]" value="lpstripe" class="btn-large btn-block waves-effect waves-light">Continuer</button>
                             <p>J'accepte les <a href="https://feelwellshop.com/fr/conditions-generales-de-ventes" target="_blank">conditions générales de vente</a></p>
                             <img class="responsive-img monetico" src="assets/images/paiement-securise-stripe.jpeg" alt="Stripe protège vos achats">
                         </div>
